#fix functions that had internal set.seed() calls, so that they no longer do (user can call set.seed() prior to running these functions #these are: somel(), and the two make_* functions #fix examples that used earlier iterations of these three functions (in .Rd and the vignettes) #misc typos and nits to the vignettes fixed

--- a/doc/demographic-data-example.Rmd
+++ b/doc/demographic-data-example.Rmd
@@ -40,7 +40,8 @@ for use in exploring/demonstrating labelr functionality. Here, we'll create a
 1000-observation data.frame.
 
 ```{r}
-df <- make_demo_data(n = 1000, seed = 555)
+set.seed(555)
+df <- make_demo_data(n = 1000)
 
 head(df)
 ```
