--- a/vignettes/labeling-quick-start.Rmd
+++ b/vignettes/labeling-quick-start.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
   fig.height = 4.7
 )
 ```
-## A Whirlind Tour
+## A Whirlwind Tour
 This vignette provides an ad hoc introduction to a smattering of labelr 
 functionalities and uses cases. Other brief vignettes cover additional issues and 
 applications, offering a mix of new material and expanded treatments or excerpts 
@@ -112,7 +112,8 @@ This function (included with labelr) creates fake "demographic" data intended
 for use in exploring/demonstrating labelr functionality.
 
 ```{r}
-df <- make_demo_data(n = 1000, seed = 555)
+set.seed(555)
+df <- make_demo_data(n = 1000)
 ```
 
 ### Add a variable "frame label" using `add_frame_lab()` 
@@ -312,11 +313,14 @@ tail(df, 5) # Base R function utils::tail()
 
 taill(df, 5) # labelr function taill() (note the "l")
 
+set.seed(293)
 car::some(df, 5) # car package function car::some()
 
-somel(df, 5, seed = 1837) # labelr function somel() (note the "l")
+set.seed(293)
+somel(df, 5) # labelr function somel() (note the "l")
 ```
-Note that `some()` and `somel()` will not return the same random rows.
+Note that `some()` and `somel()` will not return the same random rows, even with 
+the same seed.
 
 ### Add value labels back to the data.frame with `add_lab_cols()`
 Whereas `use_val_labs()` replaces value-labeled variable values with their 
@@ -405,7 +409,8 @@ In this case, we catch all vars with "x" in their name
 `make_likert_data` is another labelr-provided function.
 
 ```{r}
-dflik <- make_likert_data(scale = 1:7, seed = 272)
+set.seed(272)
+dflik <- make_likert_data(scale = 1:7)
 head(dflik)
 ```
 Put the variables we wish to label and the labels to use in stand-alone vectors, 
@@ -708,21 +713,6 @@ mt2 <- add_val1(
 )
 ```
 
-There's no law against adding not-yet-needed value labels
-
-```{r}
-mt2 <- add_val_labs(
-  data = mt2,
-  vars = "am",
-  vals = c(99),
-  labs = c("friend")
-)
-
-get_name_labs(mt2)
-
-get_val_labs(mt2)
-```
-
 ### Add and NUMERICAL RANGE value labels
 Now, let's add numerical value range labels, using `add_quant_labs()`. 
 
@@ -838,9 +828,12 @@ tail(mt_pipe, 5) # Base R function utils::tail()
 
 taill(mt_pipe, 5) # labelr function taill() (note the "l")
 
+set.seed(1837)
 car::some(mt_pipe, 5) # car package function car::some()
 
-somel(mt_pipe, 5, seed = 1837) # labelr function somel() (note the "l")
+set.seed(1837)
+somel(mt_pipe, 5) # labelr function somel() (note the "l")
 ```
 
-Note that `some()` and `somel()` will not return the same random rows.
+Note that `some()` and `somel()` will not return the same random rows, even with 
+the same seed.
