--- a/vignettes/labels-and-common-commands-aliases.Rmd
+++ b/vignettes/labels-and-common-commands-aliases.Rmd
@@ -58,9 +58,11 @@ but more cumbersome long-form commands.
 
 * `wbl` is an alias for `with_both_labs` 
 
-* `afl` is an alias for `afls` 
+* `afl` is an alias for `add_frame_lab` 
 
-* `gfl` is an alias for `get_frame_labs` 
+* `gfl` is an alias for `get_frame_lab` 
+
+* `dfl` is an alias for `drop_frame_lab` 
 
 ## What Are Labels For?
 labelr allows you to label Base R data.frames and then use those labels in a few
@@ -71,7 +73,7 @@ letting you temporarily swap in labels for values in descriptive and exploratory
 analyses. Other vignettes cover most of these topics. Here, we will briefly 
 illustrate just a few of the "letting you temporarily..." possibilities.
 
-## First things first - Let's Label Our Data Frame
+## First Things First - Let's Label Our Data Frame
 We'll use the popular Motor Trend Cars (mtcars) data.frame. We'll start by loading
 labelr, copying mtcars to new data.frame called df, adding variable name labels, 
 then adding variable value labels. Then we'll show a few ways to use labels (mostly
