--- a/README.Rmd
+++ b/README.Rmd
@@ -18,8 +18,8 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-labelr supports creation and use of three classes of data.frame labels, the last 
-of which comes in three flavors.
+labelr is an experimental ("beta") R package that supports creation and use of 
+three classes of data.frame labels, the last of which comes in three flavors.
 
 1. **Frame labels** - Each data.frame may be given a single "frame label" of 500 
   characters or fewer, which may describe key general features or characteristics
