#update NEWS and intro vignette

--- a/vignettes/labelr-introduction.Rmd
+++ b/vignettes/labelr-introduction.Rmd
@@ -669,6 +669,10 @@ The available aliases are as follows:
 
 * `with_val_labs` alias is `wvl`
 
+* `add_lab_cols` alias is `alc`
+
+* `add_lab_col1` alias is `alc1`
+
 * `add_lab_dummies` is  `ald` 
 
 * `add_lab_dumm1` is  `ald1` 
