#add use_val_lab1 and make select documentation copy edits, and insertions/edits to NEWs and first vignette

--- a/vignettes/labelr-introduction.Rmd
+++ b/vignettes/labelr-introduction.Rmd
@@ -667,6 +667,8 @@ The available aliases are as follows:
 
 * `use_val_labs` alias is `uvl`
 
+* `use_val_lab1` alias is `uvl1`
+
 * `with_val_labs` alias is `wvl`
 
 * `add_lab_cols` alias is `alc`
